[tool.poetry]
name = "qubesmirrore"
version = "2.1"
description = "Simple mirror manager for yum repos, as used in Qubes OS infra."
license = "GPL2+"
authors = [
    "Wojtek Porczyk <woju@invisiblethingslab.com>"
]
repository = "https://github.com/QubesOS/qubes-infrastructure-mirrors"

[tool.poetry.dependencies]
python = ">=3.8"
aiohttp = ">=3.8.1"

[tool.poetry.scripts]
mkmetalink = "qubesmirror.metalink:main"
